--- a/sections/SchemesandSolution.tex
+++ b/sections/SchemesandSolution.tex
@@ -1,13 +1,13 @@
 \subsection{fvSchemes and fvSolution}
 \paragraph{}
-The fvSchemes dictionary contains the numerical schemes that they are used in the simulation. In the hypotheses section we have considered that the flow is stationary. To impose this condition we must modify the \textbf{system/fvSchemes} file, the section of \textit{ ddtSchemes}, which is the temporal integration scheme. We must write steadyState. Finally, the file that has been used to run the simulation is presented below.
+The fvSchemes dictionary contains the numerical schemes that they are used in the simulation. In the hypotheses section we have considered that the flow is transient To impose this condition we must modify the \texttt{system/fvSchemes} file, the section of \textit{ddtSchemes}, which is the temporal integration scheme. We must write Euler. Finally, the file that has been used to run the simulation is presented below.
 
 \begin{footnotesize}
 \begin{verbatim}
 /*--------------------------------*- C++ -*----------------------------------*\
 | =========                 |                                                 |
 | \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox           |
-|  \\    /   O peration     | Version:  4.0                                   |
+|  \\    /   O peration     | Version:  4.x                                   |
 |   \\  /    A nd           | Web:      www.OpenFOAM.org                      |
 |    \\/     M anipulation  |                                                 |
 \*---------------------------------------------------------------------------*/
@@ -16,33 +16,34 @@ FoamFile
     version     2.0;
     format      ascii;
     class       dictionary;
+    location    "system";
     object      fvSchemes;
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
 ddtSchemes
 {
-    default         steadyState;
+    default         Euler;
 }
 
 gradSchemes
 {
     default         Gauss linear;
+    grad(p)         Gauss linear;
     grad(U)         cellLimited Gauss linear 1;
 }
 
 divSchemes
 {
     default         none;
-    div(phi,U)      bounded Gauss linearUpwindV grad(U);
-    div(phi,k)      bounded Gauss upwind;
-    div(phi,omega)  bounded Gauss upwind;
+//    div(phi,U)      Gauss upwind;
+    div(phi,U)      Gauss linearUpwind grad(U);
     div((nuEff*dev2(T(grad(U))))) Gauss linear;
 }
 
 laplacianSchemes
 {
-    default         Gauss linear corrected;
+    default         Gauss linear limited corrected 0.33;
 }
 
 interpolationSchemes
@@ -52,12 +53,7 @@ interpolationSchemes
 
 snGradSchemes
 {
-    default         corrected;
-}
-
-wallDist
-{
-    method meshWave;
+    default         limited corrected 0.33;
 }
 
 
@@ -68,7 +64,7 @@ wallDist
 
 
 \paragraph{}
-The fvSolution contains the resolution methods and the tolerances for each equation, but in our case it has not been modified. So, the file fvSolution for the current case is the following:
+The \texttt{system/fvSolution} file contains the resolution methods and the tolerances for each equation, but in our case it has not been modified. So, the file fvSolution for the current case is the following:
 
 
 \begin{footnotesize}
@@ -76,7 +72,7 @@ The fvSolution contains the resolution methods and the tolerances for each equat
 /*--------------------------------*- C++ -*----------------------------------*\
 | =========                 |                                                 |
 | \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox           |
-|  \\    /   O peration     | Version:  4.0                                   |
+|  \\    /   O peration     | Version:  4.x                                   |
 |   \\  /    A nd           | Web:      www.OpenFOAM.org                      |
 |    \\/     M anipulation  |                                                 |
 \*---------------------------------------------------------------------------*/
@@ -91,66 +87,59 @@ FoamFile
 
 solvers
 {
+    pcorr
+    {
+        solver          GAMG;
+        tolerance       1e-2;
+        relTol          0;
+        smoother        DICGaussSeidel;
+        cacheAgglomeration no;
+        maxIter         50;
+    }
+
     p
     {
-        solver           GAMG;
-        tolerance        1e-7;
-        relTol           0.01;
-        smoother         GaussSeidel;
+        $pcorr;
+        tolerance       1e-5;
+        relTol          0.01;
     }
 
-    Phi
+    pFinal
     {
         $p;
+        tolerance       1e-6;
+        relTol          0;
     }
 
-    U
+    U 
     {
-        solver           smoothSolver;
-        smoother         GaussSeidel;
-        tolerance        1e-8;
-        relTol           0.1;
-        nSweeps          1;
+        solver          smoothSolver;
+        smoother        symGaussSeidel;
+        tolerance       1e-6;
+        relTol          0.1;
     }
 
-    k
+    UFinal
     {
-        solver           smoothSolver;
-        smoother         GaussSeidel;
-        tolerance        1e-8;
-        relTol           0.1;
-        nSweeps          1;
-    }
-
-    omega
-    {
-        solver           smoothSolver;
-        smoother         GaussSeidel;
-        tolerance        1e-8;
-        relTol           0.1;
-        nSweeps          1;
+        solver          smoothSolver;
+        smoother        symGaussSeidel;
+        tolerance       1e-6;
+        relTol          0;
     }
 }
 
-SIMPLE
+PIMPLE
 {
+    correctPhi          no;
+    nOuterCorrectors    3;
+    nCorrectors         1;
     nNonOrthogonalCorrectors 0;
-    consistent yes;
-}
-
-potentialFlow
-{
-    nNonOrthogonalCorrectors 10;
 }
 
 relaxationFactors
 {
-    equations
-    {
-        U               0.9;
-        k               0.7;
-        omega           0.7;
-    }
+    U       0.5;
+    UFinal  1;
 }
 
 cache
